# My_ERP

./: .gitignore  CMakeLists.txt  ClientDatabaseManager.cpp  ClientDatabaseManager.h  ClientRegisterDialog.cpp  ClientWindow.cpp  ClientWindow.h  DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h  OrderDatabaseManager.cpp  OrderWindow.cpp  OrderWindow.h  main.cpp
src/: main.cpp
src/Database/: ClientDatabaseManager.cpp  DatabaseManager.cpp  DatabaseManager.h  OrderDatabaseManager.cpp  OrderDatabaseManager.h
src/Views/: AngleInventoryWindow.cpp  AngleInventoryWindow.h  ClientRegisterDialog.cpp  ClientRegisterDialog.h  ClientWindow.cpp  FabricInventoryWindow.cpp  FabricInventoryWindow.h  MainWindow.cpp  MainWindow.h  OrderWindow.cpp  OrderWindow.h  WoodInventoryWindow.cpp  WoodInventoryWindow.h
